fix(react-grid): fix word wrap behavior in the Header Cell

--- a/packages/dx-styles/dx-grid-bs4.css
+++ b/packages/dx-styles/dx-grid-bs4.css
@@ -104,6 +104,7 @@ button.dx-g-bs4-table-edit-command-cell {
   cursor: default;
 }
 .dx-g-bs4-sorting-control-text {
+  word-wrap: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
